feat: git and ckn

--- a/app/index.html
+++ b/app/index.html
@@ -18,15 +18,20 @@
     <body>
         <!--Header-->
         <header class="grid">
-            <div class="grid grid__6">
+            <div class="grid grid__7">
                 <h1 class="singer-name"><a href="#">Amanda Runge</a></h1>
-                <p class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Ice Cream Lover</p>
             </div>
-            <nav class="grid grid__6">
-                <ul class="navbar-link">
-                    <li><a href="#"><p>About</p></a></li>
-                    <li><a href="#"><p>Contact</p></a></li>
-                    <li><a href="#"><p>Calendar</p></a></li>
+            <nav class="grid grid__5">
+                <ul class="socialBar">
+                    <li class="socialBar-item">TW</li>
+                    <li class="socialBar-item">YT</li>
+                    <li class="socialBar-item">LN</li>
+                    <li class="socialBar-item">Amanda</li>
+                </ul>
+                <ul class="navbar">
+                    <li class="navbar__item"><a href="#"><p>About</p></a></li>
+                    <li class="navbar__item"><a href="#"><p>Contact</p></a></li>
+                    <li class="navbar__item"><a href="#"><p>Calendar</p></a></li>
                     <!--<li><a href="#"><p>Gallery</p></a></li>-->
                 </ul>
             </nav>
@@ -39,115 +44,118 @@
         </section>
         <!--About-->
         <section class="grid">
-            <div class="grid grid__6">
+            <div class="grid grid__12">
                 <h2>About</h2>
-                <p class="text">Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
-            </div>
-            <div class="grid grid__6">
-                <p class="text">She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
-                <p class="text">Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
+                <div class="columns--3">
+                    <p class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Ice Cream Lover</p>
+                    <p class="text">Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
+                    <p class="text">She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+                    <p class="text">Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
+                </div>
             </div>
         </section>
         <!--Begin MailChimp Signup Form -->
         <section class="grid">
-            <div class="grid__12">
+            <div class="grid grid__12">
                 <legend>
                     <h2>Mailing List</h2>
                 </legend>
-            </div>
-            <div id="mc_embed_signup">
-                <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef"
-                      method="post" 
-                      id="mc-embedded-subscribe-form" 
-                      name="mc-embedded-subscribe-form" 
-                      class="validate" 
-                      target="_blank" 
-                      novalidate>
-                    <fieldset id="mc_embed_signup_scroll">
-                        <ul class="mc-field-group input-group">
-                            <li class="grid__2">
-                                <strong>Email Format</strong>
-                            </li>
-                            <li class="grid__2">
-                                <label for="mce-EMAILTYPE-0">html</label>
-                                <input type="radio" 
-                                       value="html" 
-                                       name="EMAILTYPE" 
-                                       id="mce-EMAILTYPE-0">
-                            </li>
-                            <li class="grid__2">
-                                <label for="mce-EMAILTYPE-1">text</label>
-                                <input type="radio" 
-                                       value="text" 
-                                       name="EMAILTYPE" 
-                                       id="mce-EMAILTYPE-1">
-                            </li>
-                            <li class="grid__3">
-                                <div class="indicates-required">
-                                    <p><span class="asterisk">*</span> indicates required</p>
-                                </div>
-                            </li>
-                        </ul>
-                        <ul>
-                            <li class="mc-field-group">
-                                <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-                                <input type="email"
-                                       value="" 
-                                       name="EMAIL" 
-                                       class="required email" 
-                                       id="mce-EMAIL">
-                            </li>
-                            <li class="mc-field-group">
-                                <div class="grid grid__6">
-                                    <label for="mce-FNAME">First Name </label>
-                                    <input type="text" 
+                <div id="mc_embed_signup">
+                    <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef"
+                          method="post" 
+                          id="mc-embedded-subscribe-form" 
+                          name="mc-embedded-subscribe-form" 
+                          class="validate" 
+                          target="_blank" 
+                          novalidate>
+                        <fieldset id="mc_embed_signup_scroll">
+                            <ul class="mc-field-group input-group">
+                                <li class="grid__2">
+                                    <strong>Email Format</strong>
+                                </li>
+                                <li class="grid grid__2">
+                                    <label for="mce-EMAILTYPE-0">html</label>
+                                    <input type="radio" 
+                                           value="html" 
+                                           name="EMAILTYPE" 
+                                           id="mce-EMAILTYPE-0">
+                                </li>
+                                <li class="grid grid__2">
+                                    <label for="mce-EMAILTYPE-1">text</label>
+                                    <input type="radio" 
+                                           value="text" 
+                                           name="EMAILTYPE" 
+                                           id="mce-EMAILTYPE-1">
+                                </li>
+                                <li class="grid grid__3">
+                                    <div class="indicates-required">
+                                        <p><span class="asterisk">*</span> indicates required</p>
+                                    </div>
+                                </li>
+                            </ul>
+                            <ul>
+                                <li class="mc-field-group">
+                                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
+                                    <input type="email"
                                            value="" 
-                                           name="FNAME" 
-                                           class=""
-                                           id="mce-FNAME">
-                                </div>
-                                <div class="grid grid__6">
-                                    <label for="mce-LNAME">Last Name </label>
-                                    <input type="text"
-                                           value="" 
-                                           name="LNAME" 
-                                           class="" 
-                                           id="mce-LNAME">
-                                <div>
-                            </li>
-                            <li>
-                                <div id="mce-responses" class="clear">
-                                    <div class="response" id="mce-error-response" style="display:none">
+                                           name="EMAIL" 
+                                           class="required email" 
+                                           id="mce-EMAIL">
+                                </li>
+                                <li class="mc-field-group">
+                                    <div>
+                                        <div class="grid grid__6">
+                                            <label for="mce-FNAME">First Name </label>
+                                            <input type="text" 
+                                                   value="" 
+                                                   name="FNAME" 
+                                                   class=""
+                                                   id="mce-FNAME">
+                                        </div>
+                                        <div class="grid grid__6">
+                                            <label for="mce-LNAME">Last Name </label>
+                                            <input type="text"
+                                                   value="" 
+                                                   name="LNAME" 
+                                                   class="" 
+                                                   id="mce-LNAME">
+                                        </div>
                                     </div>
-                                    <div class="response" id="mce-success-response" style="display:none">  
+                                </li>
+                                <li>
+                                    <div id="mce-responses" class="clear">
+                                        <div class="response" id="mce-error-response" style="display:none">
+                                        </div>
+                                        <div class="response" id="mce-success-response" style="display:none">  
+                                        </div>
+                                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                            <input type="text" 
+                                                   name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" 
+                                                   tabindex="-1" 
+                                                   value="">
+                                        </div>
                                     </div>
-                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                                        <input type="text" 
-                                               name="b_1fe6ec52f1d714ac7a02b1fb1_a21b19ecef" 
-                                               tabindex="-1" 
-                                               value="">
+                                </li>
+                                <li>
+                                    <div class="clear">
+                                        <button type="submit" 
+                                                value="Subscribe" 
+                                                name="subscribe" 
+                                                id="mc-embedded-subscribe" 
+                                                class="button">Submit
+                                        </button>
                                     </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="clear">
-                                    <button type="submit" 
-                                            value="Subscribe" 
-                                            name="subscribe" 
-                                            id="mc-embedded-subscribe" 
-                                            class="button">Submit
-                                    </button>
-                                </div>
-                            </li>
-                        </ul>
-                    </fieldset>
-                </form>
+                                </li>
+                            </ul>
+                        </fieldset>
+                    </form>
+                </div>
             </div>
         </section>
         <!--Calendar-->
         <section class="grid">
-            <div class="grid__12">
+            <div class="grid grid__12">
                 <legend>
                     <h2>Calendar</h2>
                 </legend>
