--- a/app/index.html
+++ b/app/index.html
@@ -19,14 +19,20 @@
         <!--Header-->
         <header class="grid">
             <div class="grid grid__7">
-                <h1 class="singer-name"><a href="#">Amanda Runge</a></h1>
+                <div class="img__feature">
+                    <div class="img__feature__item">
+                        <img src="/assets/ARungeBio.jpg"; alt="Amanda"/>
+                    </div>
+                </div>
             </div>
             <nav class="grid grid__5">
                 <ul class="socialBar">
                     <li class="socialBar-item">TW</li>
                     <li class="socialBar-item">YT</li>
                     <li class="socialBar-item">LN</li>
-                    <li class="socialBar-item">Amanda</li>
+                    <li class="socialBar-item">
+                        <img src="/assets/sig.svg"; alt="Amanda" />
+                    </li>
                 </ul>
                 <ul class="navbar">
                     <li class="navbar__item"><a href="#"><p>About</p></a></li>
@@ -39,7 +45,7 @@
         <!--Hero -->
         <section class="grid">
             <div class="hero">
-                
+                <h1 class="singer-name"><a href="#">Amanda Runge</a></h1>
             </div>
         </section>
         <!--About-->
@@ -47,7 +53,7 @@
             <div class="grid grid__12">
                 <h2>About</h2>
                 <div class="columns--3">
-                    <p class="singer-title">Mezzo Soprano &#9679; Music Advocate &#9679; Ice Cream Lover</p>
+                    <p class="singer-title">Mezzo Soprano &amp; Music Advocate</p>
                     <p class="text">Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
                     <p class="text">She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
                     <p class="text">Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
@@ -154,21 +160,23 @@
             </div>
         </section>
         <!--Calendar-->
-        <section class="grid">
-            <div class="grid grid__12">
-                <legend>
-                    <h2>Calendar</h2>
-                </legend>
+        <section class="calendar">
+            <div class="grid">
+                <div class="grid grid__12">
+                    <legend>
+                        <h2>Calendar</h2>
+                    </legend>
+                    <div>
+                        <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" 
+                                width="96%"
+                                height="550" 
+                                frameborder="0" 
+                                scrolling="no"
+                                min-width="320">
+                        </iframe>
+                    </div>
                 <div>
-                    <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" 
-                            width="96%"
-                            height="550" 
-                            frameborder="0" 
-                            scrolling="no"
-                            min-width="320">
-                    </iframe>
-                </div>
-            <div>
+            </div>
         </section>
         <!--Gallery
         <section class="grid">
