--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,8 @@
     <head>
         <title>Amanda Runge: Mezzo Soprano</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!--Font: Open Sans -->
-        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:400,800,600,700,300">
-        <!--Font: Abril Fatface -->
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Abril+Fatface">
-        <!--Font: -->
-        <link rel='stylesheet' type="text/css" href='http://fonts.googleapis.com/css?family=Leckerli+One' >
+        <!--Yesteryear: -->
+        <link href="https://fonts.googleapis.com/css?family=Yesteryear" rel="stylesheet">
         <!--Framework Library-->
         <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <!-- MailChimp Signup Form -->
@@ -27,45 +23,60 @@
             </div>
             <nav class="grid grid__5">
                 <ul class="socialBar">
-                    <li class="socialBar-item">TW</li>
-                    <li class="socialBar-item">YT</li>
-                    <li class="socialBar-item">LN</li>
+                    <li class="socialBar-item"><a href="http://www.linkedin.com/in/amanda-runge-04a8263" target="_blank">LN</a></li>
+                    <li class="socialBar-item"><a href="https://twitter.com/manmanopera" target="_blank">TW</a></li>
+                    <li class="socialBar-item"><a href="https://soundcloud.com/mobile" target="_blank">SCl</a></li>
                     <li class="socialBar-item">
-                        <img src="/assets/sig.svg"; alt="Amanda" />
+                        <!-- <img src="/assets/sig.svg"; alt="Amanda" /> -->
+                        <h2>Amanda</h2>
                     </li>
                 </ul>
                 <ul class="navbar">
-                    <li class="navbar__item"><a href="#"><p>About</p></a></li>
-                    <li class="navbar__item"><a href="#"><p>Contact</p></a></li>
-                    <li class="navbar__item"><a href="#"><p>Calendar</p></a></li>
+                    <li class="navbar__item"><a href="#about"><p>About</p></a></li>
+                    <li class="navbar__item"><a href="#about"><p>Videos</p></a></li>
+                    <li class="navbar__item"><a href="#contact"><p>Contact</p></a></li>
+                    <li class="navbar__item"><a href="#calendar"><p>Calendar</p></a></li>
                     <!--<li><a href="#"><p>Gallery</p></a></li>-->
                 </ul>
             </nav>
+            <h1 class="hero">mezzo-soprano</h1>
         </header>
-        <!--Hero -->
-        <section class="grid">
-            <div class="hero">
-                <h1 class="singer-name"><a href="#">Amanda Runge</a></h1>
+        <!--About-->
+        <section>
+            <legend id="about">
+                <h3>About</h3>
+            </legend>
+            <p class="section__caption">Mezzo Soprano &amp; Music Advocate</p>
+            <div class="columns__2">
+                <p class="text">Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
+                <p class="text">She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
+                <p class="text">Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
             </div>
         </section>
-        <!--About-->
-        <section class="grid">
-            <div class="grid grid__12">
-                <h2>About</h2>
-                <div class="columns--3">
-                    <p class="singer-title">Mezzo Soprano &amp; Music Advocate</p>
-                    <p class="text">Amanda performs regularly with many Chicago companies, including: Mainstreet Opera, Opera on Tap, Grant Park Chorus, DaCorneto, Verismo Opera, Katydid Productions, Elgin Opera Company, Third Eye Ensemble Theatre, and Lingerie Lyrique, a burlesque opera company, where she is also a principal member. Other notable roles include: singing with the Aspen Festival Orchestra, Bakersfield Symphony and Banbury Symphony as well as performing with Kiez Oper in Berlin, Germany, and Chicago’s Redmoon Theater Company in Hangzhou, China.</p>
-                    <p class="text">She is passionate about introducing classical and live music to all audiences by making opera more accessible. Her favorite way to do this is by operating in unique locations and engaging with unconventional audiences!</p>
-                    <p class="text">Contact her for hire or collaboration. Subscribe to her newsletter or follow her calendar to be notified of upcoming performances.</p>
-                </div>
-            </div>
+        <!--Videos-->
+        <section>
+            <legend id="videos">
+                <h3>Videos</h3>
+            </legend>
+            <ul class="gallery">
+            <li>
+                <p class="section__caption">Madama Butterfly • Mainstreet Opera</p>
+                <iframe width="90%" height="320px" src="https://www.youtube.com/embed/QXLxr4OW6n8" frameborder="0" allowfullscreen></iframe>
+            </li>
+            <li>
+                <p class="section__caption">Insanity • Kiez Oper</p>
+                <iframe width="90%" height="320px" src="https://www.youtube.com/embed/SoFT_tOpplY" frameborder="0" allowfullscreen></iframe>
+            </li>
+            </ul>
         </section>
         <!--Begin MailChimp Signup Form -->
-        <section class="grid">
-            <div class="grid grid__12">
-                <legend>
-                    <h2>Mailing List</h2>
+        <section class="mailing-list">
+            <div>
+                <legend id="contact">
+                    <h3>Mailing List</h3>
                 </legend>
+                <p class="section__caption section__caption--inverse">Read Latest Updates</p>
+                <div>
                 <div id="mc_embed_signup">
                     <form action="//about.us9.list-manage.com/subscribe/post?u=1fe6ec52f1d714ac7a02b1fb1&amp;id=a21b19ecef"
                           method="post" 
@@ -76,59 +87,62 @@
                           novalidate>
                         <fieldset id="mc_embed_signup_scroll">
                             <ul class="mc-field-group input-group">
-                                <li class="grid__2">
-                                    <strong>Email Format</strong>
+                                <li>
+                                    <strong>Email Format:</strong>
                                 </li>
-                                <li class="grid grid__2">
+                                <li>
                                     <label for="mce-EMAILTYPE-0">html</label>
-                                    <input type="radio" 
+                                    <input id="mce-EMAILTYPE-0"
+                                           type="radio" 
                                            value="html" 
-                                           name="EMAILTYPE" 
-                                           id="mce-EMAILTYPE-0">
+                                           name="EMAILTYPE">
                                 </li>
-                                <li class="grid grid__2">
+                                <li>
                                     <label for="mce-EMAILTYPE-1">text</label>
-                                    <input type="radio" 
+                                    <input id="mce-EMAILTYPE-1"
+                                           type="radio" 
                                            value="text" 
-                                           name="EMAILTYPE" 
-                                           id="mce-EMAILTYPE-1">
+                                           name="EMAILTYPE">
                                 </li>
-                                <li class="grid grid__3">
+                                <li>
                                     <div class="indicates-required">
-                                        <p><span class="asterisk">*</span> indicates required</p>
+                                        <p><span class="asterisk">*</span>indicates required</p>
                                     </div>
                                 </li>
                             </ul>
                             <ul>
                                 <li class="mc-field-group">
-                                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span></label>
-                                    <input type="email"
-                                           value="" 
-                                           name="EMAIL" 
-                                           class="required email" 
-                                           id="mce-EMAIL">
+                                    <div class="email">
+                                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
+                                        </label>
+                                        <input type="email"
+                                               value="" 
+                                               name="EMAIL" 
+                                               class="required email" 
+                                               id="mce-EMAIL">
+                                   </div>
                                 </li>
                                 <li class="mc-field-group">
-                                    <div>
-                                        <div class="grid grid__6">
+                                    <ul class="name">
+                                        <li>
                                             <label for="mce-FNAME">First Name </label>
                                             <input type="text" 
                                                    value="" 
                                                    name="FNAME" 
-                                                   class=""
+                                                   class="FNAME"
                                                    id="mce-FNAME">
-                                        </div>
-                                        <div class="grid grid__6">
+                                        </li>
+                                        <li>
                                             <label for="mce-LNAME">Last Name </label>
                                             <input type="text"
                                                    value="" 
                                                    name="LNAME" 
                                                    class="" 
                                                    id="mce-LNAME">
-                                        </div>
-                                    </div>
+                                        </li>
+                                    </ul>
                                 </li>
-                                <li>
+                                <li class="mc-field-group">
                                     <div id="mce-responses" class="clear">
                                         <div class="response" id="mce-error-response" style="display:none">
                                         </div>
@@ -143,13 +157,14 @@
                                         </div>
                                     </div>
                                 </li>
-                                <li>
+                                <li class="mc-field-group">
                                     <div class="clear">
                                         <button type="submit" 
                                                 value="Subscribe" 
                                                 name="subscribe" 
                                                 id="mc-embedded-subscribe" 
-                                                class="button">Submit
+                                                class="button"
+                                                style="background-color: #4f1c3c; text-transform: uppercase;">Submit
                                         </button>
                                     </div>
                                 </li>
@@ -157,15 +172,17 @@
                         </fieldset>
                     </form>
                 </div>
+                </div>
             </div>
         </section>
         <!--Calendar-->
         <section class="calendar">
             <div class="grid">
                 <div class="grid grid__12">
-                    <legend>
-                        <h2>Calendar</h2>
+                    <legend id="calendar">
+                        <h3>Calendar</h3>
                     </legend>
+                    <p class="section__caption">Follow & Add Events</p>
                     <div>
                         <iframe src="https://calendar.google.com/calendar/embed?showPrint=0&amp;height=600&amp;wkst=1&amp;hl=en&amp;bgcolor=%23ffffff&amp;src=am2opasoltujem9nt71beh9t5o%40group.calendar.google.com&amp;color=%23691426&amp;ctz=America%2FChicago" 
                                 width="96%"
@@ -185,8 +202,9 @@
             </legend>
         </section>
         -->
+
         <footer class="footer">
-            <p>Amanda</p>
+            <p class="copyright">&#169; Amanda Runge.</p>
         </footer>
     </body>
 </html>
